--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <div id="graf1" style="min-width: 310px; height: 650px; margin: 0 auto"></div>
     <div id="graf2" style="min-width: 310px; height: 650px; margin: 0 auto"></div>
+    <div id="graf3" style="min-width: 310px; height: 650px; margin: 0 auto"></div>
 </body>
     <script src="./chart1.js"></script>
     <script src="./chart2.js"></script>
+    <script src="./chart3.js"></script>
 </html>
